Fixed the damn overflow

--- a/style.css
+++ b/style.css
@@ -18,17 +18,22 @@
   box-sizing: border-box;
 }
 
-body, html {
+html {
+  height: 100%;
+  width: 100%;
+  
+  margin: auto;
+  
+  overflow: auto;
+}
+
+body {
   margin: 0;
   padding: 0;
 }
 
 /* ----------------------------------- INDEX ----------------------------------- */
 
-.body {
-  height: 100vh;
-  width: 100vh;
-}
 
 /* 
   need position relative in order for content to use position absolute, since absolute is positioned
@@ -36,28 +41,35 @@ body, html {
     col since it is the ancestor I wish to be relative to.
 */
 .col {
-  position: relative;
-  float: left;
+  position: absolute;
   
   height: 100vh;
-  min-height: 850px;
+  
   
   border: 25px solid whitesmoke;
 }
 
 .one {
+  left: 0px;
+  top: 0px;
+  
   display: block;
-  min-height: 850px;
-  width: 30%;
-  min-width: 600px;
+  
+  min-width: 650px;
+  max-width: 650px;
+  min-height: 950px;
 }
 
 .two {
+  left: 650px;
+  top: 0px;
+  
   display: block;
   
-  min-height: 850px;
-  width: 65%;
-  min-width: 950px;
+  width: 65vw;
+  min-width: 300px;
+  max-width: 1250px;
+  min-height: 950px;
 }
 
 /* clear floats after the columns*/
@@ -214,10 +226,10 @@ mark.yellow_highlight {
 .index .grid_container {
   display: grid;
   
-  margin-left: 20px;
-  
   width: 100%;
   height: 100%;
+  
+  min-width: 1150px;
   
   grid-template-columns: 20% 20% 20% 20% 20%;
   grid-template-rows: 20% 20% 20% 20% 20%;
@@ -354,18 +366,14 @@ mark.yellow_highlight {
 
 /* ------------------------------------ BIO ------------------------------------ */
 
-
-.square_item {
-  position: absolute;
-}
-
 .bio .grid_container {
   display: grid;
-  
-  margin-top: 25px;
+  position: relative;
   
   width: 100%;
   height: 100%;
+  
+  min-width: 1150px;
   
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 50% 50%;
@@ -385,7 +393,7 @@ mark.yellow_highlight {
   grid-column-start: span 2;
   
   margin-left: -75px;
-  margin-top: 165px;
+  margin-top: 200px;
 }
 
 #bioG3 {
@@ -401,17 +409,21 @@ mark.yellow_highlight {
   
   text-align: end;
   
-  margin-top: 160px;
+  bottom: 0;
+  
+  margin-top: 170px;
   margin-right: 40px;
 }
 
 #bioG1 > div {
   width: 60%;
-  height: 95%;
+  height: calc(100% - 25px);
 
   box-shadow: 25px 25px #381460;
   
-  margin-top: 25px
+  margin-top: 25px;
+  
+  overflow: visible;
 }
 
 #bioG1 > div > h3 {
@@ -422,17 +434,17 @@ mark.yellow_highlight {
   
   margin: 0;
   
+  white-space: nowrap;
+  
   font-size: xxx-large;
   font-style: italic;
 }
 
 #bioG3 > div {
   width: 60%;
-  height: 95%;
+  height: calc(100% - 25px);
 
   box-shadow: -25px -25px #381460;
-  
-  margin-top: -25px;
 }
 
 #bioG3 > div > h3 {
@@ -442,6 +454,8 @@ mark.yellow_highlight {
   right: 160px;
   
   margin: 0;
+  
+  white-space: nowrap;
   
   font-size: xxx-large;
   font-style: italic;
